@@ -7,15 +7,21 @@ import com.gamefocal.island.game.foliage.FoliageState;
 import com.gamefocal.island.models.GameFoliageModel;
 import com.gamefocal.island.service.FoliageService;
 import com.gamefocal.island.service.NetworkService;
+import com.gamefocal.island.service.PlayerService;
 import com.google.gson.Gson;
 import com.google.gson.JsonArray;
+import com.google.gson.JsonElement;
 import com.google.gson.JsonParser;
 
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
+import java.io.StringReader;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
+import java.util.Base64;
 import java.util.Map;
 import java.util.UUID;
 
@@ -31,7 +37,7 @@ public class DevCommands extends HiveCommand {
 
         if (cmd.equalsIgnoreCase("foliage")) {
 
-            if (args[1].equalsIgnoreCase("sync")) {
+            if (args[1].equalsIgnoreCase("scan")) {
                 HiveNetMessage message1 = new HiveNetMessage();
                 message1.cmd = "worldsync";
 
@@ -44,24 +50,22 @@ public class DevCommands extends HiveCommand {
 
                 DedicatedServer.get(NetworkService.class).broadcast(message1, null);
 
-                Gson g = new Gson();
+//                BufferedWriter w = Files.newBufferedWriter(Paths.get("foliage.json"),StandardOpenOption.CREATE);
+////                BufferedReader r = new BufferedReader(new StringReader(DedicatedServer.get(FoliageService.class).getFoliageCache().toString()));
+//
+//                w.write(DedicatedServer.get(FoliageService.class).getFoliageCache().toString());
+//                w.flush();
+//                w.close();
 
-                JsonArray arr = new JsonArray();
+                System.out.println("Dumping " + DedicatedServer.get(FoliageService.class).getFoliageCache().size() + " Foliage Items to file...");
 
-                for (Map.Entry<String,GameEntity> e : DedicatedServer.get(FoliageService.class).getFoliageEntites().entrySet()) {
-                    GameFoliageModel f = new GameFoliageModel();
-                    f.hash = e.getKey();
-                    f.foliageState = FoliageState.GROWN;
-                    f.foliageType = e.getValue().getClass().getName();
-                    f.location = e.getValue().location;
-                    f.attachedEntity = e.getValue();
-
-                    arr.add(g.toJsonTree(f, GameFoliageModel.class));
-                }
-
-                Files.write(Paths.get("foliage.json"), arr.toString().getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE);
+                Files.writeString(Paths.get("foliage.json"), DedicatedServer.get(FoliageService.class).getFoliageCache().toString(), StandardOpenOption.CREATE);
 
                 System.out.println("Foliage written to foliage.json");
+            } else if (args[1].equalsIgnoreCase("sync")) {
+                for (HiveNetConnection connection : DedicatedServer.get(PlayerService.class).players.values()) {
+                    DedicatedServer.instance.getWorld().loadFoliageForPlayer(connection);
+                }
             }
         }
     }
